@@ -1,13 +1,12 @@
 # Generated by mksrcinfo v8
-# Fri Feb  2 19:42:39 UTC 2018
+# Thu Feb 15 06:15:23 UTC 2018
 pkgbase = return-to-the-roots
 	pkgdesc = Free/libre implementation of The Settlers II game engine
-	pkgver = r3846.7ba2df70
+	pkgver = r3863.e340f253
 	pkgrel = 1
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
 	changelog = ChangeLog
-	arch = i686
 	arch = x86_64
 	license = GPL3
 	makedepends = cmake
@@ -23,8 +22,30 @@ pkgbase = return-to-the-roots
 	conflicts = s25rttr
 	conflicts = s25rttr-nightly-bin
 	source = git+https://github.com/Return-To-The-Roots/s25client.git
+	source = git+https://github.com/Return-To-The-Roots/languages.git
+	source = git+https://github.com/satoren/kaguya.git
+	source = git+https://github.com/Return-To-The-Roots/libendian.git
+	source = git+https://github.com/Return-To-The-Roots/liblobby.git
+	source = git+https://github.com/Return-To-The-Roots/libsiedler2.git
+	source = git+https://github.com/Return-To-The-Roots/libutil.git
+	source = git+https://github.com/Return-To-The-Roots/mygettext.git
+	source = git+https://github.com/Return-To-The-Roots/s-c.git
+	source = git+https://github.com/Return-To-The-Roots/s25edit.git
+	source = git+https://github.com/Return-To-The-Roots/s25update.git
+	source = git+https://github.com/Return-To-The-Roots/version.git
 	source = rttr.sh
 	source = return-to-the-roots.install
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
+	sha256sums = SKIP
 	sha256sums = SKIP
 	sha256sums = b623d74292ca332b65290f15adb0c41994a80eb4f5d247c713a0d43775f9e8f8
 	sha256sums = edb41253442928a2313f856021c06f6d2999b780f0426c05cd7bdb2381a627ea
