@@ -1,10 +1,10 @@
 # Maintainer: Pierre Choffet <peuc@wanadoo.fr>
 
 pkgname=return-to-the-roots
-pkgver=r3846.7ba2df70
+pkgver=r3863.e340f253
 pkgrel=1
 pkgdesc="Free/libre implementation of The Settlers II game engine"
-arch=("i686" "x86_64")
+arch=("x86_64")
 url="https://siedler25.org/"
 license=("GPL3")
 makedepends=("cmake" "git" "boost" "sdl_mixer" "curl" "lua" "miniupnpc")
@@ -12,8 +12,33 @@ depends=("sdl_mixer" "miniupnpc" "boost-libs")
 conflicts=("s25rttr" "s25rttr-nightly-bin")
 install="return-to-the-roots.install"
 changelog="ChangeLog"
-source=("git+https://github.com/Return-To-The-Roots/s25client.git" "rttr.sh" "return-to-the-roots.install")
-sha256sums=('SKIP' "b623d74292ca332b65290f15adb0c41994a80eb4f5d247c713a0d43775f9e8f8" "edb41253442928a2313f856021c06f6d2999b780f0426c05cd7bdb2381a627ea")
+source=("git+https://github.com/Return-To-The-Roots/s25client.git"
+        "git+https://github.com/Return-To-The-Roots/languages.git"
+        "git+https://github.com/satoren/kaguya.git"
+        "git+https://github.com/Return-To-The-Roots/libendian.git"
+        "git+https://github.com/Return-To-The-Roots/liblobby.git"
+        "git+https://github.com/Return-To-The-Roots/libsiedler2.git"
+        "git+https://github.com/Return-To-The-Roots/libutil.git"
+        "git+https://github.com/Return-To-The-Roots/mygettext.git"
+        "git+https://github.com/Return-To-The-Roots/s-c.git"
+        "git+https://github.com/Return-To-The-Roots/s25edit.git"
+        "git+https://github.com/Return-To-The-Roots/s25update.git"
+        "git+https://github.com/Return-To-The-Roots/version.git"
+        "rttr.sh" "return-to-the-roots.install")
+sha256sums=("SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "SKIP"
+            "b623d74292ca332b65290f15adb0c41994a80eb4f5d247c713a0d43775f9e8f8"
+            "edb41253442928a2313f856021c06f6d2999b780f0426c05cd7bdb2381a627ea")
 
 pkgver() {
 	cd "s25client/"
@@ -23,8 +48,21 @@ pkgver() {
 prepare() {
 	cd "s25client/"
 
+	# Link to prepared submodules
+	git config submodule.RTTR/languages.url $srcdir/languages
+	git config submodule.contrib/kaguya.url $srcdir/kaguya
+	git config submodule.libendian.url $srcdir/libendian
+	git config submodule.liblobby.url $srcdir/liblobby
+	git config submodule.libsiedler2.url $srcdir/libsiedler2
+	git config submodule.libutil.url $srcdir/libutil
+	git config submodule.mygettext.url $srcdir/mygettext
+	git config submodule.s-c.url $srcdir/s-c
+	git config submodule.s25edit.url $srcdir/s25edit
+	git config submodule.s25update.url $srcdir/s25update
+	git config submodule.version.url $srcdir/version
+
 	# Get modules
-	git submodule update --init --recursive
+	git submodule update
 }
 
 build() {
